fixing desc text alignmnet stuff

--- a/about.css
+++ b/about.css
@@ -2,6 +2,8 @@
 * {
     padding: 0;
     margin: 0;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .wrapper {
@@ -49,7 +51,8 @@
     border-radius: 2px;
 }
 
-.problem,
+
+/* .problem,
 .solution {
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -64,12 +67,29 @@
 
 .solution .thumbnail {
     height: 200px;
+} */
+
+.problem,
+.solution {
+    display: flex;
+    flex-direction: row;
+}
+
+.solution .thumbnail,
+.problem .thumbnail {
+    width: 370px;
+    height: 235px;
+    margin: 5%;
 }
 
 .problem .desc {
     text-align: left;
+    margin: 5%;
+    width: 450px;
+    height: 60px;
 }
 
 .solution .desc {
     text-align: right;
+    margin: 5%;
 }
